--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                        </ul>
                      </nav>
 
-                     <a href="#" class="btn"> Login</a>
+                    <div>
+                      <a href="#" class="btn"> Login</a>
+                    </div>
                    </div>
                 </div>
             </div>
