commit to master

--- a/index.html
+++ b/index.html
@@ -1,69 +1,66 @@
 <!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
-
-    <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Home | Furni</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-</head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header-row">
+          <div class="logo">
+            <a href="#">Furni<span>.</span></a>
+          </div>
+          <div class="header-nav">
+            <nav>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
 
-<body>
-    
-
-   <header>
-            <div class="container">
-                <div class="header-row">
-                   <div class="logo">
-                    <a href="#">Furni<span>.</span></a>
-                   </div>
-                   <div class="header-nav">
-                     <nav>
-                       <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
-                       </ul>
-                     </nav>
-
-                    <div>
-                      <a href="#" class="btn"> Login</a>
-                    </div>
-                   </div>
-                </div>
+            <div>
+              <a href="#" class="btn"> Login</a>
             </div>
-   </header>
+          </div>
+        </div>
+      </div>
+    </header>
 
-   <main>
-       <section>
-         <div class="container">
-             <div class="hero-row">
-               <div class="left-col">
-                <h1>Modern Interior<br> Design Studio </h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic sequi velit placeat quia aliquid, consequuntur ipsam molestiae?</p>
-                <div class="hero-btn">
-                    <a href="#" class="btn btn2">Shop Now</a>
-                 </div>
-               </div>
-               <div class="right-col">
-                <img src="images/chair.png" alt="">
-               </div>
+    <main>
+      <section>
+        <div class="container">
+          <div class="hero-row">
+            <div class="left-col">
+              <h1>
+                Modern Interior<br />
+                Design Studio
+              </h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                sequi velit placeat quia aliquid, consequuntur ipsam molestiae?
+              </p>
+              <div class="hero-btn">
+                <a href="#" class="btn btn2">Shop Now</a>
+              <a href="#" class="btn explore-btn">Explore Now</a>
+              </div>
             </div>
-            
-         </div>
-       </section>
-   </main>
-
-
-
-
-</body>
+            <div class="right-col">
+              <img src="images/chair.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
