--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </div>
             </div>
             <div class="right-col">
-              <img src="images/chair.png" alt="" />
+              <img src="images/couch.png" alt="" />
             </div>
           </div>
         </div>
